# tuni-panda

./: .gitignore  .gitmodules  README.md
cobot_control/: CMakeLists.txt  package.xml  setup.py
cobot_control/action/: ObjectGrasp.action  PickAndPlace.action
cobot_control/launch/: control.launch  handover_demo.launch  move_to_start.launch  pick_and_place.launch  semantic_control.launch  test_calibration_camera.launch
cobot_control/scripts/: basic_control.py  chopsticks.py  environment.py  handover_demo.py  move_start.py  pick_and_place_server.py  recover_error.py  semantic_control.py  stopper.py  test_bench.py  test_calibration_camera.py
cobot_control/sparql/: apply_effects.rq  ask_plan_preconditions.rq  ask_preconditions.rq  attribute_event.rq  create_plan_graph.rq  select_satisfied_methods.rq  select_satisfied_task_methods.rq  select_semantic_plan.rq  select_subtasks_methods.rq  select_type.rq
cobot_control/src/cobot_control/: dispatcher.py  pick_and_place.py  planner.py
cobot_controllers/: CMakeLists.txt  cobot_plugin.xml  package.xml  plugin.xml  setup.py
cobot_controllers/cfg/: compliance_param.cfg  compliance_params.cfg  desired_mass_param.cfg
cobot_controllers/config/: configuration.yaml  pose-configuration.yaml
cobot_controllers/include/cobot_controllers/: cartesian_impedance_controller.h  cartesian_pose_controller.h  cartesian_velocity_controller.h  dual_controller.h  elbow_controller.h  force_controller.h  joint_impedance_controller.h  joint_position_controller.h  joint_velocity_controller.h  pseudo_inversion.h
cobot_controllers/launch/: arm.launch  cartesian_pose_controller.launch  cartesian_velocity_controller.launch  collect_data.launch  dual_controller.launch  elbow_control.launch  gripper.launch  human_triggered_grasp.launch  impedance_control.launch  insert_control.launch  joint_position_control.launch  metrics_assembly.launch  move_to_start.launch  moveit_cartesian.launch  moveit_control.launch  moveit_joint_space.launch  reachability.launch  recordings.launch  reset.launch  robot.launch  semantic_controller.launch  state_publisher.launch  test_bench.launch  test_controller.launch
cobot_controllers/msg/: Test.msg
cobot_controllers/resources/: velocity_data.txt
cobot_controllers/resources/hybrid_avoid/: checkpoint  params_300.data-00000-of-00001  params_300.index  params_400.data-00000-of-00001  params_400.index  params_500.data-00000-of-00001  params_500.index  params_600.data-00000-of-00001  params_600.index  params_700.data-00000-of-00001  params_700.index  params_800.data-00000-of-00001  params_800.index
cobot_controllers/resources/hybrid_avoidtd3/: TD3_20state_0_actor.pth  TD3_20state_1000_actor.pth  TD3_20state_1000_critic.pth  TD3_20state_200_critic.pth  TD3_20state_400_actor.pth  TD3_20state_400_critic.pth  TD3_20state_500_actor.pth  TD3_20state_500_critic.pth  TD3_20state_600_actor.pth  TD3_20state_600_critic.pth  TD3_20state_700_actor.pth  TD3_20state_700_critic.pth  TD3_20state_800_actor.pth  TD3_20state_800_critic.pth  TD3_20state_900_actor.pth  TD3_20state_900_critic.pth  props
cobot_controllers/resources/hybrid_avoidtd3_break/: TD3_20state_1000_actor.pth  TD3_20state_1000_critic.pth  TD3_20state_1100_actor.pth  TD3_20state_1100_critic.pth  TD3_20state_1200_actor.pth  TD3_20state_1200_critic.pth  TD3_20state_1300_actor.pth  TD3_20state_1300_critic.pth  (+16 more)
cobot_controllers/scripts/: arm.py  arm_controller.py  chopsticks.py  collect_data.py  grab_cartersian_move.py  grab_robot_state_reader.py  grab_velocity.py  gripper.py  human_triggered_grasp.py  links_distances.py  metrics_assembly.py  move_start.py  move_to_start.py  moveit.py  moveit_cartesian.py  opendr_demo.py  read_values_service.py  recover_error.py  reset_service.py  run_joint_recordings.py  run_recordings.py  semantic_controller.py  single_grasp_demo.py  st_listen.py  talker.py  test_bench.launch  test_bench.py  transform_ee.py  velocityTest.py
cobot_controllers/sparql/: select_id_target.rq  select_next_move.rq  select_width_target.rq
cobot_controllers/src/: cartesian_impedance_controller.cpp  cartesian_pose_controller.cpp  cartesian_pose_controller_v1.cpp  cartesian_velocity_controller.cpp  dual_controller.cpp  elbow_controller.cpp  force_controller.cpp  joint_impedance_controller.cpp  joint_position_controller.cpp  joint_position_controller_backup.cpp  joint_position_controller_v1.cpp  joint_velocity_controller.cpp
cobot_controllers/srv/: ReachTag.srv
cobot_msgs/: CMakeLists.txt  package.xml
cobot_msgs/msg/: Detection.msg  Detections.msg  Test.msg
cobot_msgs/srv/: GraspPoseDetection.srv  ReadValues.srv  ResetEnv.srv  RotateEE.srv  StopAction.srv  Take1DCartesianAction.srv  Take2DCartesianAction.srv  TakeAction.srv  TakeCartesianAction.srv  VelocityCmd.srv
cobot_tuni_msgs/: CMakeLists.txt  package.xml
cobot_tuni_msgs/msg/: Collection.msg  Command.msg  Individual.msg  Object.msg
cobot_vision/: CMakeLists.txt  package.xml  setup.py
cobot_vision/launch/: area_detector.launch  calibration.launch  calibration_hand_eye .launch  camera.launch  cobot_vision.launch  cranfield_detector.launch  static_transform.launch  stream.launch  tag_detector.launch  workspace_detector.launch
cobot_vision/msg/: Tag.msg
cobot_vision/scripts/: areas.py  calculate_tag_pose.py  calibration.py  detectron2_inference.py  image_stream_DT2bbx_CNNrot.py  image_stream_realtime.py  semantic_vision.py  visualizer.py
cobot_vision/sparql/: describe_command_results.rq  describe_instance_target.rq
cobot_vision/srv/: EstimatePose.srv
sem_server_ros/: CMakeLists.txt  package.xml  setup.py
sem_server_ros/launch/: listening.launch  ros_fuseki_endpoint.launch  ros_semantic_server.launch
sem_server_ros/msg/: DatatypeProperty.msg  ObjectProperty.msg  Triple.msg  URI.msg
sem_server_ros/scripts/: endpoint_services.py  planner.py  reasoner.py  sem_server.py  test_endpoint.py  test_semserver.py
sem_server_ros/srv/: Ask.srv  CreateSem.srv  DeleteSem.srv  Describe.srv  ReadSem.srv  Select.srv  Update.srv  UpdateSem.srv
sem_server_ros/test/: test_semserver.py  test_semserver.test
(+339 files in other folders)
