<?xml version="1.0"?>
<package format="2">
  <name>cobot_controllers</name>
  <version>0.0.0</version>
  <description>The cobot_controllers package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>

  <license>TODO</license>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>franka_hw</depend>
  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
      <controller_interface plugin="${prefix}/cobot_plugin.xml"/>
  </export>

</package>
