<?xml version="1.0"?>
<package format="2">
  <name>cobot_controllers</name>
  <version>0.0.0</version>
  <description>The cobot_controllers package</description>

  <maintainer email="alexandre.angleraud@tuni.fi">Alexandre Angleraud</maintainer>

  <license>TODO</license>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>franka_hw</depend>
  <depend>franka_example_controllers</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>

  <export>
      <controller_interface plugin="${prefix}/cobot_plugin.xml"/>
  </export>

</package>
