<?xml version="1.0"?>
<package format="2">
  <name>cobot_msgs</name>
  <version>0.0.0</version>
  <description>The cobot_msgs package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>

  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
