<?xml version="1.0"?>
<package format="2">
  <name>sem_server_ros</name>
  <version>0.0.0</version>
  <description>The sem_server_ros package</description>

  <maintainer email="alexandre.angleraud@tuni.fi">root</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>rostest</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


</package>
