<?xml version="1.0"?>
<package format="2">
  <name>sem_server_ros</name>
  <version>0.0.0</version>
  <description>The sem_server_ros package</description>

  <maintainer email="alexandre.angleraud@tuni.fi">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>cobot_tuni_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
